# kona-bot

./: configure.ac
po/: POTFILES.in
src/: Makefile.am  database.c  database.h  genre.c  genre.h  io-utils.c  io-utils.h  irc.c  irc.h  main.c  str-utils.h
